Bug 474558 - Webseeds broken
Summary: Webseeds broken
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-15 14:53 UTC by Thomas Rohloff
Modified: 2023-12-28 10:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Rohloff 2023-09-15 14:53:46 UTC
SUMMARY
Webseeds won't work, hanging at DNS resolution.


STEPS TO REPRODUCE
1. Open a torrent with webseeds, like one from archive.org

OBSERVED RESULT
Hangs

EXPECTED RESULT
Starting the download

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo Linux 2.14
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
If you start from CLI it shows: Warning: QObject::connect: No such slot bt::HttpConnection::hostResolved(net::AddressResolver *)

Might or might not be connected to #391272
Comment 1 Bug Janitor Service 2023-12-11 19:34:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/libktorrent/-/merge_requests/57
Comment 2 Albert Astals Cid 2023-12-28 10:49:32 UTC
Git commit cd8350982d4b4d65eb487801497499bc5d4796ac by Albert Astals Cid, on behalf of Jack Hill.
Committed on 28/12/2023 at 11:47.
Pushed by aacid into branch 'master'.

Fix HTTP webseeds

The slot hostResolved is being used in a SLOT macro, and so it must be declared
in the Q_SLOTS section.

Previously Qt failed to connect to hostResolved, and so even if the host was
resolved ktorrent would not attempt to connect to the webseed.

Test plan:
- Start downloading a torrent with a webseed using KTorrent
- (all torrents from archive.org have webseeds)

Previously:
- The following message is shown in the command line:
    Warning: QObject::connect: No such slot bt::HttpConnection::hostResolved(net::AddressResolver *)
- KTorrent never attempts to connect to the webseed
- Webseed tab status is stuck on "Resolving hostname <hostname>"

Now:
- there is no message in the CLI
- KTorrent attempts to connect to the webseed
- Webseed tab status should eventually change to something different.

M  +3    -1    src/download/httpconnection.h

https://invent.kde.org/network/libktorrent/-/commit/cd8350982d4b4d65eb487801497499bc5d4796ac