Fix HTTP webseeds

The slot hostResolved is being used in a SLOT macro, and so it must be declared
in the Q_SLOTS section.

Previously Qt failed to connect to hostResolved, and so even if the host was
resolved ktorrent would not attempt to connect to the webseed.

Test plan:
- Start downloading a torrent with a webseed using KTorrent
- (all torrents from archive.org have webseeds)

Previously:
- The following message is shown in the command line:
    Warning: QObject::connect: No such slot bt::HttpConnection::hostResolved(net::AddressResolver *)
- KTorrent never attempts to connect to the webseed
- Webseed tab status is stuck on "Resolving hostname <hostname>"

Now:
- there is no message in the CLI
- KTorrent attempts to connect to the webseed
- Webseed tab status should eventually change to something different.

BUG: 474558